# login-demo-REST

./: .gitignore  README.md
api/: Makefile  conftest.py  manage.py  pyproject.toml
api/login/: asgi.py  celery.py  urls.py  wsgi.py
api/login/apps/accounts/: admin.py  apps.py  selectors.py
api/login/apps/accounts/api/v1/: urls.py
api/login/apps/accounts/api/v1/serializers/: password.py  registration.py  user_profile.py
api/login/apps/accounts/api/v1/views/: login.py  password.py  registration.py  user_profile.py
api/login/apps/accounts/models/: user_account.py
api/login/apps/accounts/services/: password.py
api/login/apps/accounts/tests/: test_api_permissions.py
api/login/apps/accounts/tests/test_api/: test_login_api.py  test_logout_api.py  test_registration_api.py
api/login/apps/accounts/tests/test_models/: test_user_model.py
api/login/apps/accounts/tests/test_selectors/: test_get_users_selector.py
api/login/apps/accounts/tests/test_serializers/: test_change_password_serializer.py  test_confirm_reset_password_serializer.py  test_login_serializer.py  test_registration_serializer.py  test_reset_password_serializer.py
api/login/apps/accounts/tests/test_services/: test_login_service.py  test_password_service.py
api/login/apps/blog/: apps.py
api/login/apps/blog/api/: permissions.py
api/login/apps/blog/api/v1/: urls.py
api/login/apps/blog/api/v1/serializers/: post.py
api/login/apps/blog/api/v1/views/: comment.py  edit_comment.py  edit_post.py  post.py
api/login/apps/blog/models/: __init__.py  post.py
api/login/apps/blog/tests/: test_api.py  test_model.py
api/login/apps/blog/tests/test_serializers/: test_comment_serializer.py  test_post_serializer.py
api/login/apps/common/: apps.py
api/login/settings/: __init__.py  django.py  login.py
api/login/settings/contrib/: celery.py  redis.py  rest_framework.py  sentry.py  swagger.py
docker/: docker-compose.yml
docker/images/api/: Dockerfile
docker/images/api/files/: entrypoint.sh
